@@ -1,3 +1,8 @@
+2014-11-07  Corinna Vinschen  <corinna@vinschen.de>
+
+	* dcrt0.cc (cygwin__cxa_atexit): Fetch correct DSO handle value
+	by searching dll list.  Explain why.
+
 2014-11-06  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dcrt0.cc (cygwin_atexit): Change preceeding comment to reflect
